fix row-gap value

--- a/src/features/common/components/card-tabs/card-tabs.module.scss
+++ b/src/features/common/components/card-tabs/card-tabs.module.scss
@@ -8,7 +8,7 @@
   width: 100%;
   max-height: fit-content;
   flex-direction: column;
-  row-gap: 0.5rem;
+  row-gap: 1rem;
 
   cursor: default;
 }
